--- a/ProyectoHogarAncianos/ProyectoHogarAncianos/Reportes/ReporteRecetaPacienteFinal.rdlc
+++ b/ProyectoHogarAncianos/ProyectoHogarAncianos/Reportes/ReporteRecetaPacienteFinal.rdlc
@@ -318,6 +318,36 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
+          <Textbox Name="Textbox1">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=Fields!Receta1.Value</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>Textbox1</rd:DefaultName>
+            <Top>2.11349cm</Top>
+            <Left>2.10614cm</Left>
+            <Height>0.6cm</Height>
+            <Width>13.50667cm</Width>
+            <ZIndex>2</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
         <Top>5.10646cm</Top>
@@ -378,12 +408,45 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
+          <Textbox Name="Textbox2">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=Fields!Receta2.Value</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>Textbox1</rd:DefaultName>
+            <Top>2.18709cm</Top>
+            <Left>2.10615cm</Left>
+            <Height>0.6cm</Height>
+            <Width>13.50667cm</Width>
+            <ZIndex>2</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
         <Top>10.18647cm</Top>
         <Height>4.97417cm</Height>
         <Width>17.71896cm</Width>
         <ZIndex>13</ZIndex>
+        <Visibility>
+          <Hidden>=IIF(First(Fields!Receta2.Value, "DataSet1") = "N", True, False)</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -437,12 +500,45 @@
               </Border>
             </Style>
           </Line>
+          <Textbox Name="Textbox3">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=Fields!Receta3.Value</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>Textbox1</rd:DefaultName>
+            <Top>2.18709cm</Top>
+            <Left>2.10615cm</Left>
+            <Height>0.6cm</Height>
+            <Width>13.50667cm</Width>
+            <ZIndex>2</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
         <Top>15.30175cm</Top>
         <Height>4.97417cm</Height>
         <Width>17.71897cm</Width>
         <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=IIF(First(Fields!Receta3.Value, "DataSet1") = "N", True, False)</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -502,7 +598,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Parameters!idReceta.Value</Value>
+                <Value>=Fields!Nombre.Value</Value>
                 <Style />
               </TextRun>
             </TextRuns>
@@ -525,14 +621,14 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Textbox Name="Textbox18">
+      <Textbox Name="Textbox19">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Fields!Frecuencia.Value</Value>
+                <Value>=Fields!Edad.Value</Value>
                 <Style />
               </TextRun>
             </TextRuns>
@@ -540,7 +636,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox17</rd:DefaultName>
-        <Top>3.55452cm</Top>
+        <Top>4.11924cm</Top>
         <Left>2.46063cm</Left>
         <Height>0.6cm</Height>
         <Width>7.28896cm</Width>
@@ -555,26 +651,56 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Textbox Name="Textbox19">
+      <Textbox Name="Textbox4">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value />
+                <Value>=Fields!Cedula.Value</Value>
                 <Style />
               </TextRun>
             </TextRuns>
             <Style />
           </Paragraph>
         </Paragraphs>
-        <rd:DefaultName>Textbox17</rd:DefaultName>
-        <Top>4.11924cm</Top>
+        <rd:DefaultName>Textbox4</rd:DefaultName>
+        <Top>3.55452cm</Top>
         <Left>2.46063cm</Left>
         <Height>0.6cm</Height>
         <Width>7.28896cm</Width>
         <ZIndex>19</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox5">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Fields!Fecha.Value</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox5</rd:DefaultName>
+        <Top>2.91924cm</Top>
+        <Left>12.45376cm</Left>
+        <Height>0.6cm</Height>
+        <Width>5.01354cm</Width>
+        <ZIndex>20</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -609,56 +735,54 @@
       </ConnectionProperties>
       <rd:DataSourceID>7f44c854-75b1-4875-9a79-5e1d6419f082</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="ProyectoHogarAncianosEntidades">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>9faad414-e026-49a4-931c-d0e09dc0edb8</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSet1">
       <Query>
-        <DataSourceName>HjaContext</DataSourceName>
+        <DataSourceName>ProyectoHogarAncianosEntidades</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="Id">
-          <DataField>Id</DataField>
-          <rd:TypeName>System.Int64</rd:TypeName>
+        <Field Name="Cedula">
+          <DataField>Cedula</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
-        <Field Name="RecetaId">
-          <DataField>RecetaId</DataField>
-          <rd:TypeName>System.Int64</rd:TypeName>
-        </Field>
-        <Field Name="MedicamentoId">
-          <DataField>MedicamentoId</DataField>
-          <rd:TypeName>System.Int64</rd:TypeName>
-        </Field>
-        <Field Name="ViaId">
-          <DataField>ViaId</DataField>
-          <rd:TypeName>System.Int64</rd:TypeName>
-        </Field>
-        <Field Name="Frecuencia">
-          <DataField>Frecuencia</DataField>
+        <Field Name="Edad">
+          <DataField>Edad</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="Dosis">
-          <DataField>Dosis</DataField>
+        <Field Name="Fecha">
+          <DataField>Fecha</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="Receta">
-          <DataField>Receta</DataField>
-          <rd:TypeName>HjaContext.Receta</rd:TypeName>
+        <Field Name="Nombre">
+          <DataField>Nombre</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="Medicamento">
-          <DataField>Medicamento</DataField>
-          <rd:TypeName>HjaContext.Medicamento</rd:TypeName>
+        <Field Name="Receta1">
+          <DataField>Receta1</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="Via">
-          <DataField>Via</DataField>
-          <rd:TypeName>HjaContext.Via</rd:TypeName>
+        <Field Name="Receta2">
+          <DataField>Receta2</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Receta3">
+          <DataField>Receta3</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>HjaContext</rd:DataSetName>
-        <rd:TableName>Receta</rd:TableName>
-        <rd:ObjectDataSourceSelectMethod>RecetaDetalles</rd:ObjectDataSourceSelectMethod>
-        <rd:ObjectDataSourceType>HjaContext.Receta, ProyectoHogarAncianosEntidades, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:DataSetName>ProyectoHogarAncianosEntidades</rd:DataSetName>
+        <rd:TableName>Repo</rd:TableName>
+        <rd:ObjectDataSourceType>ProyectoHogarAncianosEntidades.Repo, ProyectoHogarAncianosEntidades, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
